src/objects/Call_Participant__c.object
<CustomObject>
    <description>Non primary participants of calls in the call log.</description>
    <fields>
        <fullName>Attended_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_Attended__c</fullName>
        <formula>IF(
 AND(
  Attended_Call__c = True,
  CSM__c = True
  ),
 True,
 False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to call log for related list creation</description>
        <label>Call Log</label>
        <referenceTo>Call_Log__c</referenceTo>
        <relationshipName>Call_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_Attended__c</fullName>
        <formula>IF(
 AND(
  Attended_Call__c = True,
  Education__c = True
  ),
 True,
 False
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Group__c</fullName>
        <formula>TEXT(Name_of_Participant__r.Employee_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Attended__c</fullName>
        <formula>IF(
 AND(
  Attended_Call__c = True,
  Executive_Sponsor__c = True
  ),
 True,
 False
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Attended__c</fullName>
        <formula>IF(
 AND(
  Attended_Call__c = True,
  Manager__c = True
  ),
 True,
 False
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Attended__c</fullName>
        <formula>IF(
 AND(
  Attended_Call__c = True,
  Marketing__c = True
  ),
 True,
 False
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSD_Attended__c</fullName>
        <formula>IF(
 AND(
  Attended_Call__c = True,
  PSD__c = True
  ),
 True,
 False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSD Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSD</label>
        <type>Checkbox</type>
    </fields>
    <label>Session Participant</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Session Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Call_Log_Lookup_is_Changed</fullName>
        <active>false</active>
        <description>Call Log lookup cannot be changed</description>
        <errorConditionFormula>ISCHANGED(Call_Log__c)</errorConditionFormula>
        <errorDisplayField>Call_Log__c</errorDisplayField>
        <errorMessage>Please do not change the Call Log number</errorMessage>
    </validationRules>
</CustomObject>